--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,15 +3,26 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>@ViewData["Title"] - GoogleCalendarSnrCiv</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/fontawesome/all.min.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/GoogleCalendarSnrCiv.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/CollapsingSidebarMenu.min.css" asp-append-version="true" />
+
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
 <body class="gbg">
+ 
     <header>
+
+
+        @{
+            await Html.RenderPartialAsync("~/Views/Shared/Partials/CollapsingSidebarMenu.cshtml");
+        }
+        @*
+
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GoogleCalendarSnrCiv</a>
@@ -33,7 +44,10 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav
+
+        *@
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -50,13 +64,11 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="~/js/jquery-dateformat.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/fontawesome/all.js" asp-append-version="true"></script>
     <script src="~/js/snrScr.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
-
-
-@section scripts {
-}
